--- a/NSG.PrimeNG.LazyLoading/NSG.PrimeNG.LazyLoading.csproj
+++ b/NSG.PrimeNG.LazyLoading/NSG.PrimeNG.LazyLoading.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NSG.PrimeNG.LazyLoading</RootNamespace>
     <AssemblyName>NSG.PrimeNG.LazyLoading</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
