--- a/NSG.PrimeNG.LazyLoading/NSG.PrimeNG.LazyLoading.csproj
+++ b/NSG.PrimeNG.LazyLoading/NSG.PrimeNG.LazyLoading.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyVersion>2.0.0.23</AssemblyVersion>
     <FileVersion>2.0.0.23</FileVersion>
     <Company>Northern Software Group</Company>
@@ -9,6 +9,7 @@
     <Product>Prime-NG library</Product>
     <Version>2.0.0</Version>
     <Description>Fluent library to take in JSON data containing 'skip', 'take' sort and filter information and output the query.</Description>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
